--- a/html/index.html
+++ b/html/index.html
@@ -7,13 +7,17 @@
   </head>
   <body>
     <div id="id-card">
-      <p id="name"></p>
       <div id="inline">
-        <p id="dob"></p>
         <p id="sex"></p>
         <p id="nationality"></p>
-        <p id="fingerprint"></p>
       </div>
+      <p id="surname"></p>
+      <p id="firstname"></p>
+      <p id="dob"></p>
+      <p id="doi">18-08-2021</p>
+      <p id="doe">18-08-2031</p>
+      <p id="fingerprint"></p>
+      <p id="signature"></p>
     </div>
     <script src="assets/js/jquery.js" type="text/javascript"></script>
     <script src="assets/js/init.js" type="text/javascript"></script>
