--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
         <p id="sex"></p>
         <p id="nationality"></p>
       </div>
-      <p id="surname"></p>
+      <p id="lastname"></p>
       <p id="firstname"></p>
       <p id="dob"></p>
       <p id="doi">18-08-2021</p>
